added form submission

--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -1,5 +1,5 @@
 .new-expense {
-  background-color: #a892ee;
+  background-color: lightgray;
   padding: 1rem;
   margin: 2rem auto;
   width: 50rem;
@@ -13,8 +13,8 @@
   font: inherit;
   cursor: pointer;
   padding: 1rem 2rem;
-  border: 1px solid #40005d;
-  background-color: #40005d;
+  border: 1px solid gray;
+  background-color: gray;
   color: white;
   border-radius: 12px;
   margin-right: 1rem;
@@ -34,5 +34,5 @@
 
 .new-expense button.alternative:hover,
 .new-expense button.alternative:active {
-  background-color: #ddb3f8;
+  background-color: lightgray;
 }
